# dlmi_challenge

./: .gitignore  LICENSE  README.md  main.py  merger.ipynb  pyproject.toml  requirements.txt  test_minidataset.py
src/dlip/conf/: train_lenet.yaml
src/dlip/data/: data.py  patientDataset.py
src/dlip/models/: models.py  train_model.py
src/dlmi/: __init__.py
src/dlmi/conf/: train_cnn.yaml  train_final.yaml  train_lenet.yaml  train_mlp.yaml  train_model.yaml  train_moe.yaml  train_moe_single.yaml  train_resnet.yaml
src/dlmi/data/: CustomDataset.py  MILDataset.py  MiniDataset.py  data.py  finalDataset.py  patientDataset.py
src/dlmi/models/: cnn_model.py  final_model.py  gating_models.py  grad_cam.py  mlp_model.py  models.py  moe_model copy.py  moe_model.py  moe_single_model.py  train_model.py
src/dlmi/utils/: mlflow.py  utils.py
