[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "dlmi_challenge"
version = "0.0.1"
dependencies = [
    "numpy==1.24.1",
    "hydra-core==1.3.2",
    "mlflow==2.10.2"
]

description = "A small example package for Deep Learning in Practise"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}


[project.scripts]
dlmi_train = "dlmi:launch"
mlflow_run = "dlmi:run_local_mlflow"

[tool.setuptools.packages.find]
where = ["src"]